examples/test/testpolicy14941.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14941
  namespace: namespace429
spec:
  podSelector:
    matchLabels:
      key23: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value2
          key8: value44
          key20: value10
      podSelector:
        matchLabels:
          key15: value11
          key13: value17
